k8s/old/mysql-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
  namespace: db
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-alias: "mysql.192.168.56.10.sslip.io"
spec:
  rules:
    - host: "mysql.192.168.56.10.sslip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mysql-svc
                port:
                  number: 3306
